# debentures_dot_com

./: README.md  pyproject.toml
src/debentures_dot_com/: __consulta_dados.py  __init__.py  __volumes.py  dev.ipynb  emissoes.py  estoques.py  eventos_fin.py  mercados.py
src/debentures_dot_com/utils/: utils.py
tests/: dev.ipynb  run_tests.py
